--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" class="active" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </nav>
 
@@ -62,7 +63,7 @@
             <img
               class="portrait"
               alt="Professional portrait placeholder (replace with real photo)"
-              src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1100' viewBox='0 0 900 1100'><defs><linearGradient id='p2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23070708'/><stop offset='1' stop-color='%23151518'/></linearGradient><linearGradient id='gold' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23f0dcaa'/><stop offset='1' stop-color='%23cdaa6b'/></linearGradient></defs><rect width='900' height='1100' rx='60' fill='url(%23p2)'/><rect x='70' y='70' width='760' height='960' rx='52' fill='none' stroke='url(%23gold)' stroke-width='8'/><circle cx='450' cy='420' r='170' fill='%23ffffff' opacity='0.05'/><circle cx='360' cy='380' r='70' fill='%23cdaa6b' opacity='0.10'/><rect x='170' y='700' width='560' height='18' rx='9' fill='%23ffffff' opacity='0.10'/><rect x='210' y='732' width='480' height='18' rx='9' fill='%23ffffff' opacity='0.08'/><text x='170' y='660' font-family='Cinzel, Georgia' font-size='34' fill='%23f0dcaa'>Ваше фото</text><text x='170' y='790' font-family='Fraunces, Georgia' font-size='18' fill='%23bfb6a6'>Замените на профессиональный портрет</text></svg>"
+              src="Амина обо мне.JPG"
             />
           </div>
 
@@ -113,22 +114,62 @@
               <div class="product-grid">
                 <div class="frame">
                   <div class="frame-inner">
-                    <div class="media" style="aspect-ratio: 4 / 3;">
+                    <a class="media cert-link" style="aspect-ratio: 4 / 3;" href="#" data-lightbox="" data-title-ru="Диплом №1 (плейсхолдер)" data-title-en="Diploma #1 (placeholder)">
                       <img
                         alt="Диплом #1 (плейсхолдер)"
-                        src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='675' viewBox='0 0 900 675'><defs><linearGradient id='bg' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='675' rx='36' fill='url(%23bg)'/><rect x='70' y='70' width='760' height='535' rx='28' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='110' y='190' font-family='Cinzel, Georgia' font-size='28' fill='%23f0dcaa'>Диплом №1</text><rect x='110' y='230' width='540' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='110' y='260' width='460' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='110' y='290' width='500' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='110' y='560' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на сертификат</text></svg>"
+                        src="диплом 1.png"
                       />
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="frame">
                   <div class="frame-inner">
-                    <div class="media" style="aspect-ratio: 4 / 3;">
+                    <a class="media cert-link" style="aspect-ratio: 4 / 3;" href="#" data-lightbox="" data-title-ru="Диплом №2 (плейсхолдер)" data-title-en="Diploma #2 (placeholder)">
                       <img
                         alt="Диплом #2 (плейсхолдер)"
-                        src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='675' viewBox='0 0 900 675'><defs><linearGradient id='bg2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='675' rx='36' fill='url(%23bg2)'/><rect x='70' y='70' width='760' height='535' rx='28' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='110' y='190' font-family='Cinzel, Georgia' font-size='28' fill='%23f0dcaa'>Диплом №2</text><rect x='110' y='230' width='560' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='110' y='260' width='420' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='110' y='290' width='480' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='110' y='560' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на сертификат</text></svg>"
+                        src="диплом 2.png"
                       />
-                    </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="frame">
+                  <div class="frame-inner">
+                    <a class="media cert-link" style="aspect-ratio: 4 / 3;" href="#" data-lightbox="" data-title-ru="Диплом №1 (плейсхолдер)" data-title-en="Diploma #1 (placeholder)">
+                      <img
+                        alt="Диплом #1 (плейсхолдер)"
+                        src="диплом 3.png"
+                      />
+                    </a>
+                  </div>
+                </div>
+                <div class="frame">
+                  <div class="frame-inner">
+                    <a class="media cert-link" style="aspect-ratio: 4 / 3;" href="#" data-lightbox="" data-title-ru="Диплом №1 (плейсхолдер)" data-title-en="Diploma #1 (placeholder)">
+                      <img
+                        alt="Диплом #1 (плейсхолдер)"
+                        src="диплом 4.png"
+                      />
+                    </a>
+                  </div>
+                </div>
+                <div class="frame">
+                  <div class="frame-inner">
+                    <a class="media cert-link" style="aspect-ratio: 4 / 3;" href="#" data-lightbox="" data-title-ru="Диплом №1 (плейсхолдер)" data-title-en="Diploma #1 (placeholder)">
+                      <img
+                        alt="Диплом #1 (плейсхолдер)"
+                        src="диплом 5.png"
+                      />
+                    </a>
+                  </div>
+                </div>
+                <div class="frame">
+                  <div class="frame-inner">
+                    <a class="media cert-link" style="aspect-ratio: 4 / 3;" href="#" data-lightbox="" data-title-ru="Диплом №1 (плейсхолдер)" data-title-en="Diploma #1 (placeholder)">
+                      <img
+                        alt="Диплом #1 (плейсхолдер)"
+                        src="диплом 6.png"
+                      />
+                    </a>
                   </div>
                 </div>
               </div>
@@ -136,8 +177,8 @@
 
             <div class="founder-actions">
               <a class="btn btn-primary" href="products.html" data-ru="Смотреть продукты" data-en="View products">Смотреть продукты</a>
-              <a class="btn btn-ghost" href="https://instagram.com/your_account" target="_blank" rel="noreferrer" aria-label="Instagram" data-ru-aria="Instagram" data-en-aria="Instagram">
-                <span aria-hidden="true">IG</span> @your_account
+              <a class="btn btn-ghost" href="https://t.me/pro_vizor888" target="_blank" rel="noreferrer" aria-label="Instagram" data-ru-aria="Instagram" data-en-aria="Instagram">
+                <span aria-hidden="true"></span>Telegram
               </a>
             </div>
           </div>
@@ -159,10 +200,18 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" class="active" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </div>
       </div>
     </footer>
+    <div class="lightbox" aria-hidden="true">
+      <div class="lightbox-content" role="dialog" aria-modal="true">
+        <button class="lightbox-close" aria-label="Закрыть" data-ru-aria="Закрыть" data-en-aria="Close">×</button>
+        <img alt="" src="" />
+        <div class="lightbox-caption"></div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
