--- a/certificates.html
+++ b/certificates.html
@@ -43,6 +43,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" class="active" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </nav>
 
@@ -77,31 +78,31 @@
             <a class="cert-card" href="#" data-lightbox="" data-title-ru="Сертификат №1 (плейсхолдер)" data-title-en="Certificate #1 (placeholder)">
               <img
                 alt="Сертификат №1 (плейсхолдер)"
-                src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1200' viewBox='0 0 900 1200'><defs><linearGradient id='bg' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='1200' rx='44' fill='url(%23bg)'/><rect x='70' y='70' width='760' height='1060' rx='36' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='120' y='210' font-family='Cinzel, Georgia' font-size='32' fill='%23f0dcaa'>Сертификат №1</text><rect x='120' y='260' width='560' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='120' y='290' width='480' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='120' y='320' width='520' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='120' y='1070' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на реальный сертификат</text></svg>"
+                src="сертификат 4.png"
               />
             </a>
             <a class="cert-card" href="#" data-lightbox="" data-title-ru="Сертификат №2 (плейсхолдер)" data-title-en="Certificate #2 (placeholder)">
               <img
                 alt="Сертификат №2 (плейсхолдер)"
-                src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1200' viewBox='0 0 900 1200'><defs><linearGradient id='bg2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='1200' rx='44' fill='url(%23bg2)'/><rect x='70' y='70' width='760' height='1060' rx='36' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='120' y='210' font-family='Cinzel, Georgia' font-size='32' fill='%23f0dcaa'>Сертификат №2</text><rect x='120' y='260' width='520' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='120' y='290' width='460' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='120' y='320' width='540' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='120' y='1070' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на реальный сертификат</text></svg>"
+                src="сертификат 1.png"
               />
             </a>
             <a class="cert-card" href="#" data-lightbox="" data-title-ru="Сертификат №3 (плейсхолдер)" data-title-en="Certificate #3 (placeholder)">
               <img
                 alt="Сертификат №3 (плейсхолдер)"
-                src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1200' viewBox='0 0 900 1200'><defs><linearGradient id='bg3' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='1200' rx='44' fill='url(%23bg3)'/><rect x='70' y='70' width='760' height='1060' rx='36' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='120' y='210' font-family='Cinzel, Georgia' font-size='32' fill='%23f0dcaa'>Сертификат №3</text><rect x='120' y='260' width='560' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='120' y='290' width='480' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='120' y='320' width='520' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='120' y='1070' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на реальный сертификат</text></svg>"
+                src="сертификат 3.png"
               />
             </a>
             <a class="cert-card" href="#" data-lightbox="" data-title-ru="Сертификат №4 (плейсхолдер)" data-title-en="Certificate #4 (placeholder)">
               <img
                 alt="Сертификат №4 (плейсхолдер)"
-                src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1200' viewBox='0 0 900 1200'><defs><linearGradient id='bg4' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='1200' rx='44' fill='url(%23bg4)'/><rect x='70' y='70' width='760' height='1060' rx='36' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='120' y='210' font-family='Cinzel, Georgia' font-size='32' fill='%23f0dcaa'>Сертификат №4</text><rect x='120' y='260' width='520' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='120' y='290' width='460' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='120' y='320' width='540' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='120' y='1070' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на реальный сертификат</text></svg>"
+                src="сертификат 2.png"
               />
             </a>
             <a class="cert-card" href="#" data-lightbox="" data-title-ru="Сертификат №5 (плейсхолдер)" data-title-en="Certificate #5 (placeholder)">
               <img
                 alt="Сертификат №5 (плейсхолдер)"
-                src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='1200' viewBox='0 0 900 1200'><defs><linearGradient id='bg5' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%230f0f12'/><stop offset='1' stop-color='%231a1a20'/></linearGradient></defs><rect width='900' height='1200' rx='44' fill='url(%23bg5)'/><rect x='70' y='70' width='760' height='1060' rx='36' fill='none' stroke='rgba(205,170,107,0.35)' stroke-width='6'/><text x='120' y='210' font-family='Cinzel, Georgia' font-size='32' fill='%23f0dcaa'>Сертификат №5</text><rect x='120' y='260' width='560' height='16' rx='8' fill='%23ffffff' opacity='0.10'/><rect x='120' y='290' width='480' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><rect x='120' y='320' width='520' height='16' rx='8' fill='%23ffffff' opacity='0.08'/><text x='120' y='1070' font-family='Fraunces, Georgia' font-size='16' fill='%23bfb6a6'>Замените на реальный сертификат</text></svg>"
+                src="сертификат 5.jpg"
               />
             </a>
             <a class="cert-card" href="#" data-lightbox="" data-title-ru="Сертификат №6 (плейсхолдер)" data-title-en="Certificate #6 (placeholder)">
@@ -137,6 +138,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" class="active" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </div>
       </div>
