--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" class="active" data-ru="Контакты" data-en="Contact">Контакты</a>
         </nav>
 
@@ -139,6 +140,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" class="active" data-ru="Контакты" data-en="Contact">Контакты</a>
         </div>
       </div>
