--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </nav>
 
@@ -94,21 +95,15 @@
 
           <div class="hero-visual" aria-label="Featured product banners">
             <div class="banner-card frame">
-              <div class="banner-tag" data-ru="Профессиональное фото (плейсхолдер)" data-en="Professional photo (placeholder)">
-                Профессиональное фото (плейсхолдер)
-              </div>
               <img
                 class="banner-img"
                 alt="Professional photo on black background with gold frame (placeholder)"
-                src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1200' height='760' viewBox='0 0 1200 760'><defs><linearGradient id='bg' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23070708'/><stop offset='1' stop-color='%23101014'/></linearGradient><linearGradient id='g' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23f0dcaa'/><stop offset='1' stop-color='%23cdaa6b'/></linearGradient></defs><rect width='1200' height='760' rx='56' fill='url(%23bg)'/><rect x='70' y='70' width='1060' height='620' rx='48' fill='none' stroke='url(%23g)' stroke-width='8'/><circle cx='340' cy='320' r='110' fill='%23ffffff' opacity='0.06'/><circle cx='420' cy='310' r='80' fill='%23cdaa6b' opacity='0.10'/><rect x='180' y='520' width='520' height='18' rx='9' fill='%23ffffff' opacity='0.10'/><rect x='180' y='552' width='420' height='18' rx='9' fill='%23ffffff' opacity='0.08'/><text x='180' y='485' font-family='Cinzel, Georgia' font-size='36' fill='%23f0dcaa'>Портрет (плейсхолдер)</text><text x='180' y='610' font-family='Fraunces, Georgia' font-size='18' fill='%23bfb6a6'>Замените на профессиональное фото на чёрном фоне</text></svg>"
+                src="Амина главная.JPG"
               />
               <div class="banner-meta">
                 <div>
                   <p class="banner-title" data-ru="Здоровье изнутри и снаружи" data-en="Health inside and out">
                     Здоровье изнутри и снаружи
-                  </p>
-                  <p class="banner-sub" data-ru="Липосомальное железо для энергии и молочко для рук для идеальной кожи" data-en="Liposomal Iron for energy and Hand Milk for perfect skin">
-                    Липосомальное железо для энергии и молочко для рук для идеальной кожи
                   </p>
                 </div>
               </div>
@@ -267,43 +262,12 @@
                   <span class="price" data-ru="Скоро" data-en="Soon">Скоро</span>
                   <div class="product-actions">
                     <a class="btn btn-small btn-ghost" href="blog.html" data-ru="Читать блог" data-en="Read the blog">Читать блог</a>
-                    <a class="btn btn-small btn-primary" href="https://www.instagram.com/pro_vizor888" target="_blank" rel="noreferrer" data-ru="Instagram" data-en="Instagram">Instagram</a>
+                    <a class="btn btn-small btn-primary" href="https://t.me/pro_vizor888" target="_blank" rel="noreferrer" data-ru="Telegram" data-en="Telegram">Telegram</a>
                   </div>
                 </div>
               </div>
             </article>
           </div>
-        </div>
-      </section>
-
-      <!-- INTRO -->
-      <section class="section" id="intro" aria-label="Short intro">
-        <div class="container about-grid">
-          <div>
-            <div class="section-head">
-            <h2 data-ru="Фармацевтическая экспертиза" data-en="Pharmacist-led expertise">Фармацевтическая экспертиза</h2>
-            <p class="muted" data-ru="Коротко обо мне" data-en="Short intro">Коротко обо мне</p>
-            </div>
-          <p class="body-text" data-ru="Я фармацевт и эксперт по wellness. Запустила линейку ради реальных результатов: железо без побочных эффектов и молочко для сухой кожи. Я знаю эти проблемы и создала лучшие продукты в этих сегментах." data-en="I am a pharmacist and wellness expert. I launched this line for real results: iron without side effects and hand milk for dry skin. I know these problems and created the best products in these segments.">
-              Я фармацевт и эксперт по wellness. Запустила линейку ради реальных результатов:
-              железо без побочных эффектов и молочко для сухой кожи. Я знаю эти проблемы и
-              создала лучшие продукты в этих сегментах.
-            </p>
-            <div class="about-pills" role="list" aria-label="Brand values">
-            <span class="pill" role="listitem" data-ru="12+ лет клинического опыта" data-en="12+ years clinical experience">12+ лет клинического опыта</span>
-            <span class="pill" role="listitem" data-ru="Честность" data-en="Integrity">Честность</span>
-            <span class="pill" role="listitem" data-ru="Наука + результат" data-en="Science + results">Наука + результат</span>
-            <span class="pill" role="listitem" data-ru="Минимализм, премиум" data-en="Minimal, premium">Минимализм, премиум</span>
-            </div>
-          </div>
-
-          <aside class="about-aside" aria-label="Brand image">
-            <img
-              class="about-img"
-              alt="Gold-framed banner placeholder"
-              src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='900' height='700' viewBox='0 0 900 700'><defs><linearGradient id='bg2' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23070708'/><stop offset='1' stop-color='%23141418'/></linearGradient><linearGradient id='gold' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23f0dcaa'/><stop offset='1' stop-color='%23cdaa6b'/></linearGradient></defs><rect width='900' height='700' rx='48' fill='url(%23bg2)'/><rect x='60' y='60' width='780' height='580' rx='40' fill='none' stroke='url(%23gold)' stroke-width='8'/><text x='110' y='340' font-family='Cinzel, Georgia' font-size='34' fill='%23f0dcaa'>Pharmaceutical elegance</text><text x='110' y='390' font-family='Fraunces, Georgia' font-size='18' fill='%23bfb6a6'>Premium black + gold banner placeholder</text></svg>"
-            />
-          </aside>
         </div>
       </section>
 
@@ -322,7 +286,7 @@
               <p class="card-kicker" data-ru="Instagram" data-en="Instagram">Instagram</p>
               <h3 data-ru="«Энергия вернулась через 2 недели»" data-en="“Energy came back in 2 weeks.”">«Энергия вернулась через 2 недели»</h3>
               <p class="card-text" data-ru="Плейсхолдер — добавьте скрин/цитату." data-en="Review placeholder — add screenshot / quote here.">Плейсхолдер — добавьте скрин/цитату.</p>
-              <a class="link" href="https://instagram.com/your_account" target="_blank" rel="noreferrer" data-ru="Источник →" data-en="View source →">Источник →</a>
+              <a class="link" href="отзыв 1.png" target="_blank" rel="noreferrer" data-ru="Источник →" data-en="View source →">Источник →</a>
             </article>
             <article class="card">
               <p class="card-kicker" data-ru="Wildberries" data-en="Wildberries">Wildberries</p>
@@ -368,6 +332,7 @@
           <a href="blog.html" data-ru="Блог" data-en="Blog">Блог</a>
           <a href="about.html" data-ru="Обо мне" data-en="About">Обо мне</a>
           <a href="certificates.html" data-ru="Сертификаты" data-en="Certificates">Сертификаты</a>
+          <a href="medical-clothing.html" data-ru="Медицинская одежда" data-en="Medical clothing">Медицинская одежда</a>
           <a href="contact.html" data-ru="Контакты" data-en="Contact">Контакты</a>
         </div>
       </div>
